fix: Update example 2 for new version of ls using pyvista

--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -160,9 +160,9 @@
     "proj.set_sampler(Datatype.FAULT, SamplerSpacing(200.0))\n",
     "\n",
     "# Choose which thickness calculator to use\n",
-    "proj.set_thickness_calculator(ThicknessCalculatorAlpha())\n",
+    "# proj.set_thickness_calculator(ThicknessCalculatorAlpha())\n",
     "# proj.set_thickness_calculator(InterpolatedStructure())\n",
-    "# proj.set_thickness_calculator(StructuralPoint())\n",
+    "proj.set_thickness_calculator(StructuralPoint())\n",
     "\n",
     "# Choose which stratigraphic sorter to use or run_all with \"take_best\" flag to run them all\n",
     "# proj.set_sorter(SorterAlpha())\n",
@@ -258,7 +258,7 @@
     "#from scipy.interpolate import RegularGridInterpolator\n",
     "#from osgeo import gdal\n",
     "#import pandas as pd\n",
-    "#import numpy as np\n",
+    "import numpy as np\n",
     "\n",
     "# LoopStructural Modelling\n",
     "t2 = time.time()\n",
@@ -280,7 +280,7 @@
     "#processedData.fault_properties['nelements'] = fault_params['nelements']\n",
     "\n",
     "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
-    "#model.nsteps=np.array([200,200,50])\n",
+    "model.nsteps=np.array([200,200,50])\n",
     "model.update()\n",
     "\n",
     "t3 = time.time()"
