--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -12,6 +12,7 @@
    "metadata": {},
    "source": [
     "> * High level approach to making a 3D model from just a bounding box you can draw\n",
+    "> * Set throught the notebook cell by cell or the bounding box will be set to a default value\n",
     "> * To run this notebook for the first time, there are some dependencies needed to use the interactive map. Execute the cell immediately below and restart jupyter."
    ]
   },
@@ -29,6 +30,19 @@
     "# may need to restart jupyter server\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if pyvista keeps crashing the jupyter notebook (often in Windows), creating\n",
+    "# a very simple pyvista plotter before-hand often fixes this issue\n",
+    "\n",
+    "import pyvista\n",
+    "pyvista.Plotter(window_size=[1,1]).show()"
    ]
   },
   {
@@ -97,6 +111,8 @@
     "import geopandas as gpd\n",
     "src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "dst_crs = \"epsg:28350\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "\n",
+    "print(\"Use the 'Draw a rectangle' tool to draw your bounding box\")\n",
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
@@ -195,21 +211,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polyclip=False # implemented in future version\n",
-    "\n",
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
     "    if(test_data_name=='Draw Your Own'):\n",
     "        src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "        dst_crs = \"epsg:28350\" # coordinate system for example data\n",
-    "        \n",
-    "        rect=m.draw_features\n",
     "\n",
+    "        rect=m.draw_features\n",
     "        if(len(rect)==0):\n",
     "            minlong=117.13698\n",
     "            maxlong=117.564464\n",
     "            minlat= -22.690712\n",
     "            maxlat=-22.396454\n",
-    "\n",
     "        else:\n",
     "            minlong=rect[0]['geometry']['coordinates'][0][0][0]\n",
     "            maxlong=rect[0]['geometry']['coordinates'][0][2][0]\n",
@@ -226,18 +238,17 @@
     "    bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
     "    mbbox = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
     "    bbox=mbbox.total_bounds\n",
-    "    st_bbox=[bbox[0],bbox[1],bbox[2],bbox[3]]\n",
-    "    print(src_crs,mbbox.total_bounds)\n",
+    "    st_bbox=[bbox[0], bbox[1], bbox[2], bbox[3]]\n",
+    "    print(\"Bounding extents in \", src_crs, mbbox.total_bounds)\n",
     "    mbbox=mbbox.to_crs(dst_crs)\n",
-    "    print(dst_crs,mbbox.total_bounds)\n",
+    "    print(\"Bounding extents in \", dst_crs, mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../scratch/last_area.csv','w') \n",
+    "    f=open('../scratch/last_area.csv', 'w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
     "    f.write(ostr)\n",
-    "    f.close()\n",
-    "    "
+    "    f.close()"
    ]
   },
   {
@@ -269,6 +280,8 @@
     "    \"top\": 1200,\n",
     "}\n",
     "model_name=os.path.join(\".\",nowtime.replace(\":\",\"-\").replace(\"T\",\"-\"))\n",
+    "if not os.path.exists(model_name):\n",
+    "    os.mkdir(model_name)\n",
     "loop_project_filename=os.path.join(model_name, \"wa_output.loop3d\")\n",
     "proj = Project(\n",
     "    use_australian_state_data = \"WA\",\n",
@@ -280,7 +293,7 @@
     "    overwrite_loopprojectfile = True\n",
     ")\n",
     "\n",
-    "proj.set_thickness_calculator(StructuralPoint())\n",
+    "# proj.set_thickness_calculator(StructuralPoint())\n",
     "proj.run_all(take_best=True)"
    ]
   },
@@ -295,46 +308,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import LoopProjectFile as LPF\n",
-    "loop_project_filename=\"wa_output.loop3d\"\n",
-    "projFile = LPF.ProjectFile(loop_project_filename)\n",
-    "projFile.stratigraphicLog.ThicknessMedian\n",
-    "\n",
-    "projFile.stratigraphicLog"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Loop Structural"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define project pathing from m2l\n",
-    "dtm_path=model_name+'/dtm/'\n",
-    "vtk_path=model_name+'/vtk/'\n",
-    "if not os.path.exists(vtk_path):\n",
-    "    os.mkdir(vtk_path)\n",
-    "filename=vtk_path+'/'+'surface_name_{}.vtk'\n",
-    "\n",
-    "bounding_box = proj.map_data.get_bounding_box()\n",
-    "minx = bounding_box['minx']\n",
-    "maxx = bounding_box['maxx']\n",
-    "miny = bounding_box['miny']\n",
-    "maxy = bounding_box['maxy']\n",
-    "model_base = bounding_box['base']\n",
-    "model_top = bounding_box['top']"
    ]
   },
   {
@@ -375,43 +352,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save to VTK surfaces"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_vtk=True\n",
-    "\n",
-    "surface_verts = {}\n",
-    "\n",
-    "def function(xyz,tri,name): # for saving out vtk files\n",
-    "    xyz = np.copy(xyz)\n",
-    "    tri = np.copy(tri)\n",
-    "    nanmask = np.all(~np.isnan(xyz),axis=1)\n",
-    "    vert_idx = np.zeros(xyz.shape[0],dtype=int) -1\n",
-    "    vert_idx[nanmask] = np.arange(np.sum(nanmask))\n",
-    "    tri[:] = vert_idx[tri]\n",
-    "    tri = tri[np.all(tri > -1,axis=1),:]\n",
-    "    xyz = xyz[nanmask,:]\n",
-    "    surface_verts[name] = (xyz,tri)\n",
-    "\n",
-    "if(save_vtk):\n",
-    "    from LoopStructural.visualisation.vtk_exporter import VtkExporter\n",
-    "    view = VtkExporter(model,vtk_path)\n",
-    "\n",
-    "    view.nsteps = np.array([200,200,200])\n",
-    "\n",
-    "    view.nelements = 1e5\n",
-    "    view.add_model_surfaces(function=function,filename=filename,faults=False)\n",
-    "    view.nelements=1e6\n",
-    "    view.add_model_surfaces(function=function,filename=filename,strati=False,displacement_cmap = 'rainbow')"
+    "vtk_path=model_name+'/vtk/'\n",
+    "if not os.path.exists(vtk_path):\n",
+    "    os.mkdir(vtk_path)\n",
+    "for f in model.features:\n",
+    "    f.surfaces(0.0)[0].vtk().save(os.path.join(vtk_path, f\"surface_{f.name}.vtk\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save voxel model"
+    "## Save to voxel model"
    ]
   },
   {
@@ -420,26 +384,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_voxels=True\n",
-    "if (save_voxels):\n",
-    "    voxel_size = 500\n",
-    "    sizex = int((maxx - minx)/voxel_size)\n",
-    "    sizey = int((maxy - miny)/voxel_size)\n",
-    "    sizez = int((model_top - model_base)/voxel_size)\n",
-    "    print('voxel_size=', voxel_size, \n",
-    "          ', saved in Z,Y,X order 16 bit unisgned, X(height)=', sizex, \n",
-    "          ', Y(#ims)=', sizey, ', Z(width)=', sizez)\n",
-    "    print('lower south west corner: west=', minx, ', south=', miny, ', lower=', model_base)\n",
-    "    voxels = model.evaluate_model(model.regular_grid(nsteps = (sizey, sizex, sizez), shuffle = False), scale = False)\n",
-    "    voxels.astype('int16').tofile(model_name + '/vtk/voxels.raw')\n",
-    "    print('voxels saved as', model_name + '/vtk/voxels.raw')"
+    "voxel_filename = os.path.join(model_name, 'voxels.raw')\n",
+    "\n",
+    "voxel_size = 500\n",
+    "\n",
+    "bounding_box = proj.map_data.get_bounding_box()\n",
+    "minx = bounding_box['minx']\n",
+    "maxx = bounding_box['maxx']\n",
+    "miny = bounding_box['miny']\n",
+    "maxy = bounding_box['maxy']\n",
+    "model_base = bounding_box['base']\n",
+    "model_top = bounding_box['top']\n",
+    "\n",
+    "sizex = int((maxx - minx)/voxel_size)\n",
+    "sizey = int((maxy - miny)/voxel_size)\n",
+    "sizez = int((model_top - model_base)/voxel_size)\n",
+    "print('voxel_size =', voxel_size, \n",
+    "      ', saved in Z,Y,X order 16 bit unsigned, X(height) =', sizex, \n",
+    "      ', Y(width) =', sizey, ', Z(depth) =', sizez)\n",
+    "print('lower south west corner: west=', minx, ', south=', miny, ', lower=', model_base)\n",
+    "\n",
+    "voxels = model.evaluate_model(model.regular_grid(nsteps = (sizey, sizex, sizez), shuffle = False), scale = False)\n",
+    "voxels.astype('int16').tofile(voxel_filename)\n",
+    "print('voxels saved as', voxel_filename)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save Geoscience Analyst Model"
+    "## Save to Geoscience Analyst Model"
    ]
   },
   {
@@ -448,79 +422,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code to parse a directory of .obj files and combine them into\n",
-    "#a single geoh5 file that GeoscienceAnalyst can read\n",
-    "#Requires installation of https://github.com/MiraGeoscience/geoh5py \n",
-    "#(note .geoh5 meshes are 0 based)\n",
-    "#Run this code after obj files have been created (see Example notebooks)\n",
-    "\n",
-    "import pandas as pd\n",
-    "from os import listdir\n",
-    "import os\n",
-    "from os.path import isfile, join\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "from geoh5py.objects import BlockModel\n",
-    "from geoh5py.workspace import Workspace\n",
-    "from geoh5py.objects import Surface\n",
-    "\n",
-    "def hextofloats(h):\n",
-    "    '''Takes a hex rgb string (e.g. #ffffff) and returns an RGB tuple (float, float, float).'''\n",
-    "    return tuple(int(h[i:i + 2], 16) / 255. for i in (1, 3, 5))  # skip '#'\n",
-    "\n",
-    "def geoh5_create_surface_data(obj_path_dir,colour_path):\n",
-    "\n",
-    "    h5file_path = obj_path_dir+\"/loop.geoh5\"\n",
-    "\n",
-    "    workspace = Workspace(h5file_path)\n",
-    "    onlyfiles = [f for f in listdir(obj_path_dir) if isfile(join(obj_path_dir, f))]\n",
-    "    colour_index=0\n",
-    "    units=proj.stratigraphic_column.stratigraphicUnits.copy().set_index(\"name\")\n",
-    "    colour_map=open(obj_path_dir+'/loop_colour_map.clr','w')\n",
-    "    colour_map.write('{\\tStart\\tRed\\tGreen\\tBlue\\t}\\n')\n",
-    "\n",
-    "    for file in onlyfiles:\n",
-    "        if ('.obj' in file):\n",
-    "            obj=pd.read_csv(obj_path_dir+'/'+file,' ',names=[\"code\",\"X\",\"Y\",\"Z\"])\n",
-    "            indices=obj[obj['code']=='f']\n",
-    "            vertices=obj[obj['code']=='v']\n",
-    "            vertices=vertices.drop(['code'], axis=1)\n",
-    "            indices=indices[list(\"XYZ\")].astype(int)\n",
-    "            i=indices.to_numpy()-1\n",
-    "            v=vertices.to_numpy()\n",
-    "            if(len(i)>0 and len(v)>0):\n",
-    "                # Create a geoh5 surface\n",
-    "                surface = Surface.create(\n",
-    "                          workspace, name=file.replace('.obj',''), vertices=v, cells=i\n",
-    "                            )\n",
-    "                if('Fault_' in file or 'dtm' in file):\n",
-    "                    colours=np.ones(surface.n_cells)*99\n",
-    "                else:\n",
-    "                    colours=np.ones(surface.n_cells)*colour_index\n",
-    "                    rgb=hextofloats(units.loc[file.replace('.obj','')]['colour'])\n",
-    "                    colour_map.write('{}\\t{}\\t{}\\t{}\\n'.format(colour_index,rgb[0],rgb[1],rgb[2]))\n",
-    "                    colour_index=colour_index+1\n",
-    "                    \n",
-    "\n",
-    "                surface.add_data({\n",
-    "                    \"colour_index\": {\n",
-    "                        \"association\":\"CELL\",\n",
-    "                        \"values\": colours\n",
-    "                    }\n",
-    "                })\n",
-    "                \n",
-    "                workspace.save_entity(surface)\n",
-    "    workspace.close()\n",
-    "                \n",
-    "    colour_map.write('{}\\t{}\\t{}\\t{}\\n'.format(99,1,1,1))\n",
-    "    colour_map.close()\n",
-    "    print(\"colour map saved as:\",obj_path_dir+'/loop_colour_map.clr')\n",
-    "\n",
-    "\n",
-    "save_GA=False\n",
-    "\n",
-    "if(save_GA):\n",
-    "    geoh5_create_surface_data(vtk_path,proj.map_data.tmp_path)\n"
+    "# For use with LoopStructural 1.7.0\n",
+    "# model.save(os.path.join(model_name, \"wa_model.geoh5\"))"
    ]
   },
   {
