Minor tidy up and fixes for m2l

--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -144,7 +144,7 @@
     "loop_project_filename=\"wa_output.loop3d\"\n",
     "proj = Project( \n",
     "    use_australian_state_data = \"WA\",\n",
-    "    # config_dictionary = config_dict,\n",
+    "    config_dictionary = config_dict,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bbox_3d,\n",
     "    verbose_level = VerboseLevel.NONE,\n",
@@ -161,8 +161,8 @@
     "\n",
     "# Choose which thickness calculator to use\n",
     "# proj.set_thickness_calculator(ThicknessCalculatorAlpha())\n",
-    "# proj.set_thickness_calculator(InterpolatedStructure())\n",
-    "proj.set_thickness_calculator(StructuralPoint())\n",
+    "proj.set_thickness_calculator(InterpolatedStructure())\n",
+    "# proj.set_thickness_calculator(StructuralPoint())\n",
     "\n",
     "# Choose which stratigraphic sorter to use or run_all with \"take_best\" flag to run them all\n",
     "# proj.set_sorter(SorterAlpha())\n",
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# Save geology map as a raster map in a specified projection (useful for overlays on online maps)\n",
-    "proj.save_geotiff_raster(filename=os.path.join(proj.map_data.tmp_path,\"geol.tif\"), projection=\"epsg:3857\")"
+    "proj.save_geotiff_raster(filename=\"wa_geology.tif\", projection=\"epsg:3857\")"
    ]
   },
   {
@@ -254,10 +254,6 @@
     "import LoopProjectFile as LPF\n",
     "import LoopStructural\n",
     "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
-    "\n",
-    "#from scipy.interpolate import RegularGridInterpolator\n",
-    "#from osgeo import gdal\n",
-    "#import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "# LoopStructural Modelling\n",
