--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -23,7 +23,9 @@
    "outputs": [],
    "source": [
     "#if not already installed:\n",
-    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+    "#!conda install -c loop3d map2loop loopstructural pyamg meshio\n",
+    "\n",
+    "#FOR UPCOMING CHANGES IN MAP2LOOP AND LPF branches fix_thicknesses"
    ]
   },
   {
@@ -39,20 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from map2loop.project import Project\n",
     "from map2loop.m2l_enums import VerboseLevel\n",
     "from map2loop.m2l_enums import Datatype\n",
     "from map2loop.sampler import SamplerSpacing, SamplerDecimator\n",
     "from map2loop.sorter import SorterUseHint, SorterUseNetworkX, SorterAgeBased, SorterAlpha\n",
-    "import time\n",
     "\n",
-    "from datetime import datetime\n",
-    "nowtime=datetime.now().isoformat(timespec='minutes')   \n",
-    "model_name=nowtime.replace(\":\",\"-\").replace(\"T\",\"-\")\n",
-    "loop_project_filename = os.path.join(model_name, \"local_source.loop3d\")\n",
-    "\n",
-    "t0 = time.time()\n",
+    "import os\n",
     "\n",
     "# Specify the boundary of the region of interest in the appropriate projection coordinates\n",
     "bounding_box = {\n",
@@ -63,26 +58,42 @@
     "    \"base\": -3200,\n",
     "    \"top\": 1200,\n",
     "}\n",
+    "\n",
+    "# define the name of the LoopProjectFile to be created\n",
+    "loop_project_filename = os.path.join( \"local_source.loop3d\")\n",
+    "\n",
+    "# define the configuration dictionary to be used by map2loop (this replaces the legacy .hjson file)\n",
+    "config_dictionary = {\n",
+    "  \"structure\" : {\n",
+    "    \"dipdir_column\": \"azimuth2\",\n",
+    "    \"dip_column\": \"dip\",},\n",
+    "  \"geology\" : {\n",
+    "    \"unitname_column\": \"unitname\",\n",
+    "    \"alt_unitname_column\": \"code\"}, \n",
+    "  \"fault\": {\n",
+    "      \"minimum_fault_length\": 0}\n",
+    "}\n",
+    "\n",
+    "\n",
     "# Initialise the project with the shapefiles, dtm, config file\n",
     "# output locations and projection to work in\n",
     "proj = Project( \n",
-    "    geology_filename = \"./source_data/geol_clip_no_gaps.shp\",\n",
-    "    fault_filename = \"./source_data/faults_clip.shp\",\n",
-    "    structure_filename = \"./source_data/structure_clip.shp\",\n",
-    "    dtm_filename = './source_data/dtm_rp.tif',\n",
-    "    config_filename = './source_data/example.hjson',\n",
-    "    clut_filename = './source_data/500kibg_colours.csv',\n",
-    "    clut_file_legacy = True,\n",
+    "    geology_filename = \"./source_data/geol_clip_no_gaps.shp\", # required\n",
+    "    fault_filename = \"./source_data/faults_clip.shp\", # optional\n",
+    "    structure_filename = \"./source_data/structure_clip.shp\", #required\n",
+    "    dtm_filename = './source_data/dtm_rp.tif', # required\n",
+    "    config_dictionary = config_dictionary,\n",
+    "    clut_filename = './source_data/500kibg_colours.csv', # optional: if this file is not provided, random colours will be used in map2loop\n",
     "    verbose_level = VerboseLevel.NONE,\n",
-    "    tmp_path = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
+    "    clut_file_legacy=False,\n",
     "    bounding_box = bounding_box,\n",
     "    loop_project_filename = loop_project_filename,\n",
-    "    overwrite_loopprojectfile = True\n",
+    "    overwrite_loopprojectfile = True, \n",
     ")\n",
     "\n",
     "# Remove faults less than 5km\n",
-    "proj.set_minimum_fault_length(5000.0)\n",
+    "proj.set_minimum_fault_length(5000.0) # this updates the value set on the config_dictionary\n",
     "\n",
     "# Set sampling distance for geology and fault maps to 200m\n",
     "proj.set_sampler(Datatype.GEOLOGY, SamplerSpacing(200.0))\n",
@@ -97,10 +108,12 @@
     "# Set specific layers from the geology map to be ignored (commonly \"cover\" or \"water\")\n",
     "proj.set_ignore_codes([\"cover\", \"Fortescue_Group\", \"A_FO_od\"])\n",
     "\n",
+    "# Set a fault to be ignored (by name)\n",
+    "# proj.set_ignore_codes([\"Fault_9\"])\n",
     "\n",
     "# Specify which stratigraphic columns sorter to use, other options are\n",
     "# (SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections)\n",
-    "proj.set_sorter(SorterAlpha())\n",
+    "# proj.set_sorter(SorterAlpha())\n",
     "\n",
     "# Or you can run map2loop and pre-specify the stratigraphic column\n",
     "column = [\n",
@@ -123,10 +136,7 @@
     "\n",
     "# Or you can get map2loop to run all column sorting algorithms it has and takes the one\n",
     "# that has the longest total basal contact length\n",
-    "#proj.run_all(take_best=True)\n",
-    "proj.run_all()\n",
-    "\n",
-    "t1 = time.time()"
+    "# proj.run_all(take_best=True)"
    ]
   },
   {
@@ -137,7 +147,7 @@
    "source": [
     "# Draw overlay of point data on geology map\n",
     "# (options are 'basal_contacts', contacts','orientations','faults')\n",
-    "proj.draw_geology_map(overlay=\"basal_contacts\")"
+    "proj.draw_geology_map(overlay=\"orientations\")"
    ]
   },
   {
@@ -163,6 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### TODO need to update LS code for the new versions\n",
+    "\n",
     "import LoopProjectFile as LPF\n",
     "from LoopStructural.visualisation import LavaVuModelViewer\n",
     "from LoopStructural.modelling.input.project_file import LoopProjectfileProcessor as LPFProcessor\n",
@@ -172,7 +184,6 @@
     "from osgeo import gdal\n",
     "import pandas as pd\n",
     "\n",
-    "t2 = time.time()\n",
     "\n",
     "LPFilename = loop_project_filename\n",
     "fault_params = {\n",
@@ -280,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "map2loop_current",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
