fix: update for v3.2

--- a/Example 2 - Draw Your Own Area.ipynb
+++ b/Example 2 - Draw Your Own Area.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d93fc52686e4480b01a4910491192e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Map area:', options=('Draw Your Own', 'Last Area Drawn'), value='Draw Your Own')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -77,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Draw Your Own\n"
+     ]
+    }
+   ],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)"
@@ -87,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,9 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epsg:4326 [117.13698  -22.690712 117.564464 -22.396454]\n",
+      "epsg:28350 [ 514069.70809875 7490607.48994945  558101.7853635  7523283.65581696]\n"
+     ]
+    }
+   ],
    "source": [
     "polyclip=False # implemented in future version\n",
     "\n",
@@ -247,9 +279,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 2024-12-17 13:42:29,795: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:38,035: interpolators.py:352 -- Detected 12 collocated point clusters. Aggregating these points.\n",
+      " \n",
+      "WARNING: 2024-12-17 13:42:39,304: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Boolgeeda_Iron_Formation and Brockman_Iron_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,304: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Brockman_Iron_Formation and Bunjinah_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Fortescue_Group\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Fortescue_Group and Turee_Creek_Group\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Turee_Creek_Group and Weeli_Wolli_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Weeli_Wolli_Formation and Jeerinah_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Jeerinah_Formation and Pyradie_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Woongarra_Rhyolite\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,319: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Woongarra_Rhyolite and Marra_Mamba_Iron_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,476: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Mount_McRae_Shale_and_Mount_Sylvia_Formation and Wittenoom_Formation\n",
+      "\n",
+      "WARNING: 2024-12-17 13:42:39,491: thickness_calculator.py:93 -- More than 75% of units (11/12) have a calculated thickness of -1. This may indicate that InterpolatedStructure is not suitable for this dataset.\n",
+      "WARNING: 2024-12-17 13:42:39,491: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "map2loop 11.499931335449219 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from map2loop.project import Project\n",
@@ -271,14 +343,15 @@
     "    \"top\": 1200,\n",
     "}\n",
     "model_name=os.path.join(\".\",nowtime.replace(\":\",\"-\").replace(\"T\",\"-\"))\n",
-    "loop_project_filename=os.path.join(model_name, \"wa_output.loop3d\")\n",
+    "loop_project_filename=os.path.join(\"wa_output.loop3d\")\n",
     "proj = Project(\n",
     "    use_australian_state_data = \"WA\",\n",
     "    verbose_level = VerboseLevel.NONE,\n",
     "    tmp_path  = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
     "    bounding_box = bbox_3d,\n",
-    "    loop_project_filename = loop_project_filename\n",
+    "    loop_project_filename = loop_project_filename, \n",
+    "    overwrite_loopprojectfile = True\n",
     ")\n",
     "\n",
     "proj.run_all()\n",
@@ -608,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
