--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -573,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "map2loop_current",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
