fix: update for loopstructural/map2loop

--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,24 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: 2024-12-17 13:34:00,034: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
+      "WARNING: 2024-12-17 15:05:06,980: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
       "\n",
-      "WARNING: 2024-12-17 13:34:06,034: interpolators.py:352 -- Detected 12 collocated point clusters. Aggregating these points.\n",
+      "WARNING: 2024-12-17 15:05:13,227: interpolators.py:352 -- Detected 12 collocated point clusters. Aggregating these points.\n",
       " \n",
-      "WARNING: 2024-12-17 13:34:10,949: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Jeerinah_Formation and Bunjinah_Formation\n",
+      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Jeerinah_Formation and Bunjinah_Formation\n",
       "\n",
-      "WARNING: 2024-12-17 13:34:10,949: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
+      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
       "\n",
-      "WARNING: 2024-12-17 13:34:10,949: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
+      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
       "\n",
-      "WARNING: 2024-12-17 13:34:11,122: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n",
+      "WARNING: 2024-12-17 15:05:19,645: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n",
       "c:\\Users\\angel\\anaconda3\\envs\\m2l1\\Lib\\site-packages\\pandas\\core\\series.py:1031: RuntimeWarning: invalid value encountered in cast\n",
       "  arr = np.asarray(values, dtype=dtype)\n"
      ]
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +302,6 @@
     "import numpy as np\n",
     "\n",
     "# LoopStructural Modelling\n",
-    "t2 = time.time()\n",
     "fault_params = {\n",
     "    'interpolatortype':'FDI',\n",
     "    'nelements':1e4,\n",
@@ -311,17 +312,7 @@
     "    'regularisation':5,\n",
     "}\n",
     "projFile = LPF.ProjectFile(loop_project_filename)\n",
-    "processedData = LPFProcessor(projFile)\n",
-    "processedData.foliation_properties['sg'] = foliation_params\n",
-    "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
-    "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
-    "\n",
-    "# processedData.thicknesses['Bunjinah_Formation'] = - np.inf # bottom unit \n",
-    "# processedData.thicknesses['Turee_Creek_Group'] = np.inf # top unit\n",
-    "\n",
-    "# model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
-    "# # model.nsteps=np.array([200,200,50])\n",
-    "# model.update()"
+    "processedData = LPFProcessor(projFile)"
    ]
   },
   {
@@ -330,11 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# viewer = Loop3DView(model, background=\"white\")\n",
-    "# # viewer.plot_data(model['sg'], name = 'sg')\n",
-    "# viewer.plot_model_surfaces()\n",
-    "\n",
-    "# viewer.display()  "
+    "processedData.thicknesses['Pyradie_Formation'] = 600\n",
+    "processedData.thicknesses"
    ]
   },
   {
@@ -343,7 +331,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed"
+    "processedData.foliation_properties['sg'] = foliation_params\n",
+    "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
+    "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
+    "\n",
+    "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
+    "model.nsteps=np.array([100,100,50])\n",
+    "model.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view = Loop3DView(model)\n",
+    "view.plot_model_surfaces()\n",
+    "view.display()"
    ]
   }
  ],
