--- a/Example 3 - Local Source Data.ipynb
+++ b/Example 3 - Local Source Data.ipynb
@@ -44,17 +44,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: 2024-12-17 13:50:25,304: mapdata.py:466 -- Datatype FOLD is not set and so cannot be loaded\n",
+      "WARNING: 2024-12-17 15:04:37,577: mapdata.py:466 -- Datatype FOLD is not set and so cannot be loaded\n",
       "\n",
-      "WARNING: 2024-12-17 13:50:25,304: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
+      "WARNING: 2024-12-17 15:04:37,577: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
       "\n",
-      "WARNING: 2024-12-17 13:50:26,549: interpolators.py:352 -- Detected 1 collocated point clusters. Aggregating these points.\n",
+      "WARNING: 2024-12-17 15:04:38,915: interpolators.py:352 -- Detected 1 collocated point clusters. Aggregating these points.\n",
       " \n",
-      "WARNING: 2024-12-17 13:50:27,752: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
+      "WARNING: 2024-12-17 15:04:40,115: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
       "\n",
-      "WARNING: 2024-12-17 13:50:27,752: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
+      "WARNING: 2024-12-17 15:04:40,115: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
       "\n",
-      "WARNING: 2024-12-17 13:50:27,788: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n"
+      "WARNING: 2024-12-17 15:04:40,170: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n"
      ]
     }
    ],
@@ -499,7 +499,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: 2024-12-17 13:50:28,476: __init__.py:86 -- Surfe is not installed, SurfeRBFInterpolator will not be available\n"
+      "WARNING: 2024-12-17 15:04:41,199: __init__.py:86 -- Surfe is not installed, SurfeRBFInterpolator will not be available\n"
      ]
     }
    ],
@@ -521,18 +521,7 @@
     "    'regularisation':5,\n",
     "}\n",
     "projFile = LPF.ProjectFile(loop_project_filename)\n",
-    "processedData = LPFProcessor(projFile)\n",
-    "\n",
-    "# processedData.thicknesses['Bunjinah_Formation'] = - np.inf # bottom unit \n",
-    "# processedData.thicknesses['Turee_Creek_Group'] = np.inf # top unit\n",
-    "\n",
-    "# processedData.foliation_properties['sg'] = foliation_params\n",
-    "# processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
-    "# processedData.fault_properties['nelements'] = fault_params['nelements']\n",
-    "\n",
-    "# model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
-    "# # model.nsteps=np.array([200,200,50])\n",
-    "# model.update()"
+    "processedData = LPFProcessor(projFile)"
    ]
   },
   {
@@ -543,7 +532,17 @@
     {
      "data": {
       "text/plain": [
-       "{'max': 0, 'min': -inf, 'id': 1, 'colour': '#d5d7b6'}"
+       "{'Turee_Creek_Group': inf,\n",
+       " 'Boolgeeda_Iron_Formation': 513.3548578608784,\n",
+       " 'Woongarra_Rhyolite': 662.2963361473105,\n",
+       " 'Weeli_Wolli_Formation': 488.06278213390567,\n",
+       " 'Brockman_Iron_Formation': 903.475067985537,\n",
+       " 'Mount_McRae_Shale_and_Mount_Sylvia_Formation': 307.55640655664024,\n",
+       " 'Wittenoom_Formation': 401.8966449836911,\n",
+       " 'Marra_Mamba_Iron_Formation': 286.2609804336047,\n",
+       " 'Jeerinah_Formation': 802.8260596759528,\n",
+       " 'Bunjinah_Formation': 5811.5286857790325,\n",
+       " 'Pyradie_Formation': 600}"
       ]
      },
      "execution_count": 7,
@@ -552,15 +551,94 @@
     }
    ],
    "source": [
-    "processedData.stratigraphic_column['sg']['Pyradie_Formation']['max'] = 5000000\n",
-    "processedData.stratigraphic_column['sg']['Pyradie_Formation']"
+    "processedData.thicknesses['Pyradie_Formation'] = 600\n",
+    "processedData.thicknesses"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 2024-12-17 15:04:45,746: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:45,751: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 15:04:45,818: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:45,822: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 15:04:45,904: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:45,908: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 15:04:45,999: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:46,003: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 15:04:46,067: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:46,067: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 15:04:46,150: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 15:04:46,150: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6983c2a3e764aa08b77b13534688e97",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/19 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## Elapsed Time"
+    "processedData.foliation_properties['sg'] = foliation_params\n",
+    "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
+    "processedData.fault_properties['nelements'] = fault_params['nelements']\n",
+    "\n",
+    "model = LoopStructural.GeologicalModel.from_processor(processedData)\n",
+    "model.nsteps=np.array([100,100,50])\n",
+    "model.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5576690ec40d4cab980f1abd33c9ac96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:62369/index.html?ui=P_0x2a1163cb690_0&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = Loop3DView(model)\n",
+    "view.plot_model_surfaces()\n",
+    "view.display()"
    ]
   },
   {
@@ -573,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "map2loop_current",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
